--- a/src/app/audio-player/audio-player.component.html
+++ b/src/app/audio-player/audio-player.component.html
@@ -3,7 +3,26 @@
     src="http://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3">
 </audio>
 
-<ion-toolbar color="primary" padding>
+<ion-toolbar>
+<div class="audioplayer">
+    <ion-title>Audio Wiedergabe</ion-title>
+
+    <ion-range
+        min="0"
+        [max]="duration"
+        [value]="currentTime" 
+        (ionChange)="seek($event)"
+        >
+        <ion-label color="light" slot="start">{{ currentTimeText }}</ion-label>
+        <ion-label color="light" slot="end">{{ durationText }}</ion-label>
+    </ion-range>
+
+    <div class="options">
+        <div> <ion-icon name="play" size="large"></ion-icon></div>
+        <div> <ion-icon name="pause" size="large"></ion-icon></div>
+        <div class="disabled"> <ion-icon name="stop" size="large"></ion-icon></div>
+    </div>
+
     <div class="ion-text-center">
         <ion-button (click)="play()" size="large" fill="clear" color="light">
             <ng-container *ngIf="isLoading; else loaded">Loading</ng-container>
@@ -13,14 +32,5 @@
             </ng-template>
         </ion-button>
     </div>
-
-    <ion-range
-        min="0"
-        [max]="duration"
-        [value]="currentTime"
-        (ionChange)="seek($event)"
-        color="light">
-        <ion-label color="light" slot="start">{{ currentTimeText }}</ion-label>
-        <ion-label color="light" slot="end">{{ durationText }}</ion-label>
-    </ion-range>
+</div>
 </ion-toolbar>
