--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,40 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.audioplayer{
+    background-color: rgb(255, 255, 255);
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px 30px 10px 10px;
+
+    .toolbar-title{
+        color: black;
+    }
+
+    .options{
+        display: flex;
+        justify-content: center;
+
+        div{
+            background-color: #1B0F71;
+            border-radius: 50%;
+            height: 55px;
+            width: 55px;
+            padding: 12px;
+            margin: 0 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &.disabled{
+                opacity: 0.6;
+            }
+        }
+    }
+
+    .range-bar{
+        background: red !important;
+        height: 4px;
+    }
+}
